# my_submodule_lib

./: CMakeLists.txt  README.md
src/: foo.cpp
